fixed broken layout

--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -1,3 +1,7 @@
 $screen-mobile-max: 991px;
-$screen-desktop-min: 992px;
-$color-sticky-panel: linear-gradient(to bottom, #B8B9C0, #DDDEE6);
+$screen-small-desktop-min: 992px;
+$screen-small-desktop-max: 1199px;
+$screen-medium-desktop-min: 1200px;
+$screen-medium-desktop-max: 1919px;
+$screen-large-desktop-min: 1920px;
+$background-sticky-panel: linear-gradient(to bottom, #B8B9C0, #DDDEE6);
