--- a/css/main.scss
+++ b/css/main.scss
@@ -1,6 +1,6 @@
 ---
 ---
-
+@import "normalize";
 @import "syntax";
 @import "variables";
 
@@ -8,31 +8,44 @@
   box-sizing: border-box;
 }
 
-body {
-  margin: 0;
+html, body {
+  width: 100%;
+  height: 100%;
+}
+
+#background {
+  background: $background-sticky-panel no-repeat center center fixed;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+
+  @media screen and (max-width: $screen-mobile-max) {
+    display: none;
+  }
 }
 
 main {
+  position: relative;
+  margin-left: auto;
+  margin-right: 0;
+  min-height: 100%;
+  background-color: white;
+  padding: 20px;
 
-  aside {
-    background: $color-sticky-panel no-repeat center center fixed;
-    min-height: 100vh;
-    width: 60%;
-    position: fixed;
-    left: 0;
-    top: 0;
+  width: 40%;
 
-    @media screen and (max-width: $screen-mobile-max) {
-      display: none;
-    }
+  @media screen and (max-width: $screen-mobile-max) {
+    width: 100%;
   }
+}
 
-  div.content {
-    left: 60%;
-    position: relative;
+aside {
+  position: fixed;
+  overflow: hidden;
+  height: 100vh;
+  width: 60%;
 
-    @media screen and (min-width: $screen-desktop-min) {
-      left: 0;
-    }
+  @media screen and (max-width: $screen-mobile-max) {
+    display: none;
   }
 }
